--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration-element/ms-decoration-element.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration-element/ms-decoration-element.component.html
@@ -138,13 +138,12 @@
         </mat-form-field>
 
         <!-- technique (free) -->
-        <mat-form-field *ngIf="!decElemTechEntries?.length" style="width: 8em">
-          <input matInput formControlName="technique" placeholder="technique" />
+        <mat-form-field>
+          <input matInput [formControl]="technique" placeholder="technique" />
           <mat-error
             *ngIf="
-              item['controls'].technique.errors?.maxLength &&
-              (item['controls'].technique.dirty ||
-                item['controls'].technique.touched)
+              technique.errors?.maxLength &&
+              (technique.dirty || technique.touched)
             "
             >technique too long</mat-error
           >
