--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
@@ -78,7 +78,7 @@
                 </td>
                 <td>{{ d.id }}</td>
                 <td>{{ d.name }}</td>
-                <td>{{ d.elements?.length || 0 }}</td>
+                <td style="text-align: center;">{{ d.elements?.length || 0 }}</td>
                 <td>{{ d.artist?.name }}</td>
               </tr>
             </tbody>
