--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration-artist/ms-decoration-artist.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decoration-artist/ms-decoration-artist.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <div>
     <!-- type (bound) -->
-    <mat-form-field *ngIf="typeEntries?.length" style="width: 8em">
+    <mat-form-field *ngIf="decArtTypeEntries?.length" style="width: 8em">
       <mat-select [formControl]="type" placeholder="type">
         <mat-option *ngFor="let e of typeEntries" [value]="e.id">{{
           e.value
@@ -13,7 +13,7 @@
     </mat-form-field>
 
     <!-- type (free) -->
-    <mat-form-field *ngIf="!typeEntries?.length" style="width: 8em">
+    <mat-form-field *ngIf="!decArtTypeEntries?.length" style="width: 8em">
       <input matInput [formControl]="type" placeholder="type" />
       <mat-error *ngIf="type.errors?.required && (type.dirty || type.touched)"
         >type required</mat-error
