--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/multi-entry-selector/multi-entry-selector.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/multi-entry-selector/multi-entry-selector.component.html
@@ -1,4 +1,32 @@
 <form [formGroup]="form" *ngIf="data?.entries?.length">
+  <div *ngIf="toolbar">
+    <button
+      type="button"
+      mat-icon-button
+      matTooltip="Toggle all"
+      (click)="toggleAll()"
+    >
+      <mat-icon>published_with_changes</mat-icon>
+    </button>
+    <button
+      type="button"
+      color="primary"
+      mat-icon-button
+      matTooltip="Select all"
+      (click)="selectAll()"
+    >
+      <mat-icon>done_all</mat-icon>
+    </button>
+    <button
+      type="button"
+      mat-icon-button
+      matTooltip="Deselect all"
+      color="warn"
+      (click)="deselectAll()"
+    >
+      <mat-icon>remove_done</mat-icon>
+    </button>
+  </div>
   <div formArrayName="entries">
     <div *ngFor="let item of entries.controls; let i = index">
       <!-- child form -->
